@@ -72,6 +72,7 @@ ADD `mode_ub` enum('Y','N') NOT NULL default 'N',
 ADD `mode_uc` enum('Y','N') NOT NULL default 'N',
 ADD `mode_ug` enum('Y','N') NOT NULL default 'N',
 ADD `mode_uh` enum('Y','N') NOT NULL default 'N',
+ADD `mode_ui` enum('Y','N') NOT NULL default 'N',
 ADD `mode_un` enum('Y','N') NOT NULL default 'N',
 ADD `mode_uo` enum('Y','N') NOT NULL default 'N',
 ADD `mode_ur` enum('Y','N') NOT NULL default 'N',
